--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,7 @@
 # Site settings
 title: Yasmeen Almuhanna
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I craft experiences, visualize ideas, and develop business strategies based on research data and principles of design. Welcome to my online portfolio.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yasmeenalmuhanna.com" # the base hostname & protocol for your site
 
